--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="signing">By siging up, you agree to our Highlanders <u>Terms and Conditions</u> and that you have read our <u>Privacy Policy</u>, including <u>Cookie Use</u>. You may receive SMS and/or Email Notifications from Highlanders and can opt-out at any time!</string>
     <string name="forgotlogin">Forgot your login details? <b><u>Get help signing in</u></b>.</string>
+    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
 </resources>
